--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,8 @@
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "redis": "^4.6.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
